# xlab

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  package-lock.json
xlab-bedrock/: CHANGELOG.md  Cargo.toml  README.md
xlab-bedrock/examples/: agent_with_bedrock.rs  document_with_bedrock.rs  embedding_with_bedrock.rs  extractor_with_bedrock.rs  image_generator.rs  image_with_bedrock.rs  rag_with_bedrock.rs  streaming_with_bedrock.rs  streaming_with_bedrock_and_tools.rs
xlab-bedrock/examples/common/: mod.rs
xlab-bedrock/src/: client.rs  completion.rs  embedding.rs  image.rs  streaming.rs
xlab-bedrock/src/types/: assistant_content.rs  completion_request.rs  document.rs  errors.rs  image.rs  media_types.rs  message.rs  text_to_image.rs  tool.rs  user_content.rs
xlab-eternalai/: CHANGELOG.md  Cargo.toml  README.md
xlab-eternalai/examples/: agent_with_eternalai.rs
xlab-eternalai/src/providers/: eternalai.rs
xlab-fastembed/: CHANGELOG.md  Cargo.toml  README.md
xlab-fastembed/examples/: vector_search.rs  vector_search_local.rs
xlab-fastembed/src/: lib.rs
xlab-lancedb/: CHANGELOG.md  Cargo.toml  README.md
xlab-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
xlab-lancedb/src/: lib.rs
xlab-lancedb/src/utils/: deserializer.rs  mod.rs
xlab-lancedb/tests/: integration_tests.rs
xlab-lancedb/tests/fixtures/: lib.rs
xlab-milvus/: CHANGELOG.md  Cargo.toml  README.md
xlab-milvus/examples/: vector_search_milvus.rs
xlab-milvus/src/: lib.rs
xlab-mongodb/: CHANGELOG.md  Cargo.toml  README.md
xlab-mongodb/examples/: vector_search_mongodb.rs
xlab-mongodb/src/: lib.rs
xlab-mongodb/tests/: integration_tests.rs
xlab-neo4j/: CHANGELOG.md  Cargo.toml  README.md
xlab-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
xlab-neo4j/src/: lib.rs  vector_index.rs
xlab-neo4j/tests/: integration_tests.rs
xlab-postgres/: CHANGELOG.md  Cargo.toml  Makefile  README.md
xlab-postgres/examples/: vector_search_postgres.rs
xlab-postgres/src/: lib.rs
xlab-postgres/tests/: integration_tests.rs
xlab-qdrant/: CHANGELOG.md  Cargo.toml  README.md
xlab-qdrant/examples/: qdrant_vector_search.rs
xlab-qdrant/src/: lib.rs
xlab-qdrant/tests/: integration_tests.rs
xlab-s3vectors/: CHANGELOG.md  Cargo.toml  README.md
xlab-s3vectors/examples/: s3vectors_vector_search.rs
xlab-s3vectors/src/: lib.rs
xlab-scylladb/: CHANGELOG.md  Cargo.toml  README.md
xlab-scylladb/examples/: scylladb_vector_search.rs
xlab-scylladb/tests/: integration_tests.rs
xlab-sqlite/: CHANGELOG.md  Cargo.toml
xlab-sqlite/src/: lib.rs
xlab-sqlite/tests/: integration_test.rs
xlab-surrealdb/: CHANGELOG.md  Cargo.toml
xlab-surrealdb/examples/: vector_search_surreal.rs
xlab-wasm/: README.md
xlab-wasm/examples/basic/: index.ts  package.json
xlab-wasm/examples/basic_with_tools/: package-lock.json  package.json
xlab-wasm/examples/embedding/: README.md  index.ts
xlab-wasm/pkg/: package.json
xlab-wasm/pkg/src/: utils.ts
xlab-wasm/src/: audio_generation.rs  completion.rs  image_generation.rs  tool.rs
xlab-wasm/src/providers/: anthropic.rs  cohere.rs  gemini.rs  huggingface.rs  hyperbolic.rs  mira.rs  mistral.rs  ollama.rs  openai.rs  voyageai.rs
yoob-bedrock/: CHANGELOG.md  Cargo.toml  README.md
yoob-bedrock/examples/: agent_with_bedrock.rs  document_with_bedrock.rs  embedding_with_bedrock.rs  extractor_with_bedrock.rs  image_generator.rs  image_with_bedrock.rs  rag_with_bedrock.rs  streaming_with_bedrock.rs  streaming_with_bedrock_and_tools.rs
yoob-bedrock/examples/common/: mod.rs
yoob-bedrock/src/: client.rs  completion.rs  embedding.rs  image.rs  streaming.rs
yoob-bedrock/src/types/: errors.rs  (+9 more)
yoob-eternalai/: CHANGELOG.md  Cargo.toml  README.md
yoob-eternalai/examples/: agent_with_eternalai.rs
yoob-fastembed/: CHANGELOG.md  Cargo.toml  README.md
yoob-fastembed/examples/: vector_search.rs  vector_search_local.rs
yoob-fastembed/src/: lib.rs
yoob-lancedb/: CHANGELOG.md  Cargo.toml  README.md
yoob-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
yoob-lancedb/src/: lib.rs
yoob-lancedb/tests/: integration_tests.rs
yoob-milvus/: CHANGELOG.md  Cargo.toml  README.md
yoob-milvus/examples/: vector_search_milvus.rs
yoob-milvus/src/: lib.rs
yoob-mongodb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
yoob-mongodb/examples/: vector_search_mongodb.rs
yoob-mongodb/src/: lib.rs
yoob-mongodb/tests/: integration_tests.rs
yoob-neo4j/: CHANGELOG.md  Cargo.toml  README.md
yoob-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
yoob-neo4j/src/: lib.rs  vector_index.rs
yoob-neo4j/tests/: integration_tests.rs
yoob-postgres/: CHANGELOG.md  Cargo.toml  Makefile  README.md
yoob-postgres/examples/: vector_search_postgres.rs
yoob-postgres/src/: lib.rs
yoob-postgres/tests/: integration_tests.rs
yoob-qdrant/: CHANGELOG.md  Cargo.toml  README.md
yoob-qdrant/examples/: qdrant_vector_search.rs
yoob-qdrant/src/: lib.rs
yoob-qdrant/tests/: integration_tests.rs
yoob-s3vectors/: CHANGELOG.md  Cargo.toml  README.md
yoob-s3vectors/examples/: s3vectors_vector_search.rs
yoob-s3vectors/src/: lib.rs
yoob-scylladb/: CHANGELOG.md  Cargo.toml  README.md
yoob-scylladb/examples/: scylladb_vector_search.rs
yoob-scylladb/src/: lib.rs
yoob-scylladb/tests/: integration_tests.rs
yoob-sqlite/: CHANGELOG.md  Cargo.toml  README.md
yoob-sqlite/examples/: vector_search_sqlite.rs
yoob-sqlite/src/: lib.rs
yoob-sqlite/tests/: integration_test.rs
yoob-surrealdb/: CHANGELOG.md  Cargo.toml  README.md
yoob-surrealdb/examples/: vector_search_surreal.rs
yoob-surrealdb/src/: lib.rs
yoob-wasm/: Cargo.toml  README.md  __build.rs
yoob-wasm/pkg/: package-lock.json  package.json
yoob-wasm/src/: audio_generation.rs  completion.rs  embedding.rs  image_generation.rs  lib.rs  tool.rs  transcription.rs  vector_store.rs
(+62 files in other folders)
