[package]
name = "xlab-bedrock"
version = "0.3.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "AWS Bedrock model provider for xlab integration."

[dependencies]
async-stream = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types = { workspace = true }
base64 = { workspace = true }
xlab-core = { path = "../xlab-core", version = "0.19.0", features = ["image"] }
xlab-derive = { path = "../xlab-core/xlab-core-derive", version = "0.1.6" }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing-subscriber = { workspace = true }
