[package]
name = "xlab-fastembed"
version = "0.2.10"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "xlab vector store index integration for Fastembed. https://github.com/Anush008/fastembed-rs"
repository = "https://github.com/caojin0321/xlab"

[dependencies]
xlab-core = { path = "../xlab-core", version = "0.19.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
fastembed = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "vector_search"
required-features = ["xlab-core/derive"]

[[example]]
name = "vector_search_local"
required-features = ["xlab-core/derive"]
