[package]
name = "xlab-milvus"
version = "0.1.10"
edition = { workspace = true }
description = "Milvus vector store implementation for the xlab framework"
license = "MIT"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
xlab-core = { path = "../xlab-core", version = "0.19.0" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "vector_search_milvus"
required-features = ["xlab-core/derive"]
