[package]
name = "yoob-fastembed"
version = "0.2.10"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "yoob vector store index integration for Fastembed. https://github.com/Anush008/fastembed-rs"
repository = "https://github.com/caojin0321/yoob"

[dependencies]
yoob-core = { path = "../yoob-core", version = "0.19.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
fastembed = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "vector_search"
required-features = ["yoob-core/derive"]

[[example]]
name = "vector_search_local"
required-features = ["yoob-core/derive"]
