[package]
name = "yoob-mongodb"
version = "0.2.21"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "MongoDB implementation of a yoob vector store."
repository = "https://github.com/caojin0321/yoob"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
mongodb = { workspace = true }
yoob-core = { path = "../yoob-core", version = "0.19.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpmock = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }

[[example]]
name = "vector_search_mongodb"
required-features = ["yoob-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["yoob-core/derive"]
