[package]
name = "yoob-postgres"
version = "0.1.19"
edition = { workspace = true }
description = "PostgreSQL-based vector store implementation for the yoob framework"
license = "MIT"
readme = "README.md"
repository = "https://github.com/caojin0321/yoob"

[dependencies]
yoob-core = { path = "../yoob-core", version = "0.19.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
] }
pgvector = { workspace = true, features = ["sqlx"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }


testcontainers = { workspace = true }
httpmock = { workspace = true }

dotenvy = { workspace = true }
