[package]
name = "yoob-qdrant"
version = "0.1.24"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "yoob vector store index integration for Qdrant. https://qdrant.tech"
repository = "https://github.com/caojin0321/yoob"

[dependencies]
yoob-core = { path = "../yoob-core", version = "0.19.0" }
serde_json = { workspace = true }
serde = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
testcontainers = { workspace = true }
httpmock = { workspace = true }

[[example]]
name = "qdrant_vector_search"
required-features = ["yoob-core/derive"]


[[test]]
name = "integration_tests"
required-features = ["yoob-core/derive"]
